Enum OrderStatus {
  Pending
  Received
  Cancelled
}

Table Supplier {
  supplier_id int [pk, increment]
  name varchar(100) [not null]
  contact_name varchar(100)
  phone varchar(20)
  email varchar(100) [unique]
  address text
}

Table Category {
  category_id int [pk, increment]
  name varchar(50) [not null, unique]
}

Table Product {
  product_id int [pk, increment]
  name varchar(100) [not null]
  category_id int
  supplier_id int
  price decimal(10,2) [not null]
  description text
}

Table Stock {
  stock_id int [pk, increment]
  product_id int [not null]
  quantity int [not null, default: 0]
  last_updated timestamp
}

Table PurchaseOrder {
  order_id int [pk, increment]
  supplier_id int [not null]
  order_date date [not null]
  status OrderStatus [not null, default: Pending]
}

Table PurchaseOrderItem {
  order_id int [not null]
  product_id int [not null]
  quantity int [not null]
  cost decimal(10,2) [not null]

  indexes {
    (order_id, product_id) [pk]
  }
}

Ref: Product.category_id > Category.category_id
Ref: Product.supplier_id > Supplier.supplier_id
Ref: Stock.product_id > Product.product_id
Ref: PurchaseOrder.supplier_id > Supplier.supplier_id
Ref: PurchaseOrderItem.order_id > PurchaseOrder.order_id
Ref: PurchaseOrderItem.product_id > Product.product_id
